# light-rpc

./: CLAUDE.md  CMakeLists.txt
docs/superpowers/plans/: 2025-05-24-phase1-rdmaendpoint.md
inc/: event_dispatcher.h  fast_block_pool.h  fast_channel.h  fast_define.h  fast_iobuf.h  fast_iobuf_inl.h  fast_log.h  fast_rdma_endpoint.h  fast_resource.h  fast_server.h  fast_shared.h  fast_unique.h  fast_utils.h  fast_verbs.h  message_dispatcher.h
proto/: fast_impl.proto
spec/: medium-multipart.md
spec/deprecated/: phase3-uniqueresource.md  phase4-sharedresource.md
spec/phases/: phase1-onewaybutex.md  phase1-rdmaendpoint.md  phase2-eventdispatcher.md  phase3-rdmaendpoint.md  phase4-fastchannel.md  phase4-uniqueresource.md  phase5-fastchannel.md  phase5-fastserver.md  phase5-sharedresource.md  phase6-fastserver.md
src-common/: fast_block_pool.cc  fast_define.cc  fast_iobuf.cc  fast_verbs.cc
src-endpoint/: event_dispatcher.cc  fast_channel.cc  fast_rdma_endpoint.cc  fast_server.cc  message_dispatcher.cc
src-resource/: fast_resource.cc  fast_shared.cc  fast_unique.cc
test/: client.cc  server.cc  utils.h
test/unit/: test_fast_utils.cc  test_message_dispatcher.cc  test_rdma_endpoint.cc
